# readwebform

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
examples/: contact.html  demo.sh  file-upload.html  python_api_example.py
src/readwebform/: __init__.py  __main__.py  api.py  browser.py  cli.py  core.py  forms.py  multipart.py  output.py  parser.py  server.py
tests/: __init__.py  test_api.py  test_cli.py  test_forms.py  test_https.py  test_integration.py  test_multipart.py  test_output.py  test_parser.py  test_threading.py  test_timeout.py
