[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readwebform"
version = "0.2.0"
description = "A command-line utility for gathering structured user input through temporary web forms"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vlad Lasky", email = "github@vladlasky.com"}
]
keywords = ["cli", "form", "web", "input", "automation", "scripting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.optional-dependencies]
test = ["pytest", "cryptography>=41.0.0"]

[project.urls]
Homepage = "https://github.com/vlasky/readwebform"
Repository = "https://github.com/vlasky/readwebform"
Issues = "https://github.com/vlasky/readwebform/issues"

[project.scripts]
readwebform = "readwebform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
